@@ -7,32 +7,44 @@ pipeline {
     }
 
     stages {
+
         stage('Checkout') {
             steps {
                 checkout scm
             }
         }
 
-        stage('MuleSoft Build & Deploy') {
+        stage('Build & Publish to Exchange') {
             steps {
-                script {
-                    withCredentials([usernamePassword(
-                        credentialsId: 'anypoint-credentials', 
-                        usernameVariable: 'AP_USER', 
-                        passwordVariable: 'AP_PASS'
-                    )]) {
-                        
-                        withEnv(["MAVEN_OPTS=--add-opens java.base/sun.net.www.protocol.jar=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"]) {
-                            
-                            bat """
-mvn clean deploy -DskipTests^
-mvn mule:deploy ^
--Danypoint.username=%AP_USER% ^
--Danypoint.password=%AP_PASS% ^
--Dmaven.repo.local=C:/Users/ganta/.m2/repository
-"""
-                        }
-                    }
+                withCredentials([usernamePassword(
+                    credentialsId: 'anypoint-credentials',
+                    usernameVariable: 'AP_USER',
+                    passwordVariable: 'AP_PASS'
+                )]) {
+
+                    bat """
+                    mvn clean deploy -DskipTests ^
+                    -Danypoint.username=%AP_USER% ^
+                    -Danypoint.password=%AP_PASS%
+                    """
+                }
+            }
+        }
+
+        stage('Deploy to CloudHub 2.0') {
+            steps {
+                withCredentials([usernamePassword(
+                    credentialsId: 'anypoint-credentials',
+                    usernameVariable: 'AP_USER',
+                    passwordVariable: 'AP_PASS'
+                )]) {
+
+                    bat """
+                    mvn mule:deploy ^
+                    -Danypoint.username=%AP_USER% ^
+                    -Danypoint.password=%AP_PASS% ^
+                    -Dmaven.repo.local=C:/Users/ganta/.m2/repository
+                    """
                 }
             }
         }
@@ -40,10 +52,10 @@ mvn mule:deploy ^
 
     post {
         success {
-            echo 'SUCCESS: API is now deploying to CloudHub 2.0!'
+            echo 'SUCCESS: API deployed to CloudHub 2.0'
         }
         failure {
-            echo 'FAILED: Deployment failed. Check logs.'
+            echo 'FAILED: Check logs carefully'
         }
     }
 }
